mobile author bio alignment fix?

--- a/style.css
+++ b/style.css
@@ -628,6 +628,7 @@ footer {
 
 	p.author-bio {
 		margin-left:60px;
+		margin-top: -10px;
 	}
 	
 	.badge {
